# proto/gen/api/v1/daily_checklist_service_grpc.pb.go
@@ -1,0 +1,208 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.6.2
+// - protoc             (unknown)
+// source: api/v1/daily_checklist_service.proto
+
+package apiv1
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+	emptypb "google.golang.org/protobuf/types/known/emptypb"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	DailyChecklistService_GetDailyChecklist_FullMethodName    = "/memos.api.v1.DailyChecklistService/GetDailyChecklist"
+	DailyChecklistService_UpsertDailyChecklist_FullMethodName = "/memos.api.v1.DailyChecklistService/UpsertDailyChecklist"
+	DailyChecklistService_DeleteDailyChecklist_FullMethodName = "/memos.api.v1.DailyChecklistService/DeleteDailyChecklist"
+)
+
+// DailyChecklistServiceClient is the client API for DailyChecklistService service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type DailyChecklistServiceClient interface {
+	// GetDailyChecklist returns a checklist by resource name. Owners can read
+	// their private checklists; everyone can read public checklists.
+	GetDailyChecklist(ctx context.Context, in *GetDailyChecklistRequest, opts ...grpc.CallOption) (*DailyChecklist, error)
+	// UpsertDailyChecklist creates or replaces the authenticated user's
+	// checklist for a calendar date.
+	UpsertDailyChecklist(ctx context.Context, in *UpsertDailyChecklistRequest, opts ...grpc.CallOption) (*DailyChecklist, error)
+	// DeleteDailyChecklist deletes the authenticated user's checklist.
+	DeleteDailyChecklist(ctx context.Context, in *DeleteDailyChecklistRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
+}
+
+type dailyChecklistServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewDailyChecklistServiceClient(cc grpc.ClientConnInterface) DailyChecklistServiceClient {
+	return &dailyChecklistServiceClient{cc}
+}
+
+func (c *dailyChecklistServiceClient) GetDailyChecklist(ctx context.Context, in *GetDailyChecklistRequest, opts ...grpc.CallOption) (*DailyChecklist, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(DailyChecklist)
+	err := c.cc.Invoke(ctx, DailyChecklistService_GetDailyChecklist_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *dailyChecklistServiceClient) UpsertDailyChecklist(ctx context.Context, in *UpsertDailyChecklistRequest, opts ...grpc.CallOption) (*DailyChecklist, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(DailyChecklist)
+	err := c.cc.Invoke(ctx, DailyChecklistService_UpsertDailyChecklist_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *dailyChecklistServiceClient) DeleteDailyChecklist(ctx context.Context, in *DeleteDailyChecklistRequest, opts ...grpc.CallOption) (*emptypb.Empty, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(emptypb.Empty)
+	err := c.cc.Invoke(ctx, DailyChecklistService_DeleteDailyChecklist_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// DailyChecklistServiceServer is the server API for DailyChecklistService service.
+// All implementations must embed UnimplementedDailyChecklistServiceServer
+// for forward compatibility.
+type DailyChecklistServiceServer interface {
+	// GetDailyChecklist returns a checklist by resource name. Owners can read
+	// their private checklists; everyone can read public checklists.
+	GetDailyChecklist(context.Context, *GetDailyChecklistRequest) (*DailyChecklist, error)
+	// UpsertDailyChecklist creates or replaces the authenticated user's
+	// checklist for a calendar date.
+	UpsertDailyChecklist(context.Context, *UpsertDailyChecklistRequest) (*DailyChecklist, error)
+	// DeleteDailyChecklist deletes the authenticated user's checklist.
+	DeleteDailyChecklist(context.Context, *DeleteDailyChecklistRequest) (*emptypb.Empty, error)
+	mustEmbedUnimplementedDailyChecklistServiceServer()
+}
+
+// UnimplementedDailyChecklistServiceServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedDailyChecklistServiceServer struct{}
+
+func (UnimplementedDailyChecklistServiceServer) GetDailyChecklist(context.Context, *GetDailyChecklistRequest) (*DailyChecklist, error) {
+	return nil, status.Error(codes.Unimplemented, "method GetDailyChecklist not implemented")
+}
+func (UnimplementedDailyChecklistServiceServer) UpsertDailyChecklist(context.Context, *UpsertDailyChecklistRequest) (*DailyChecklist, error) {
+	return nil, status.Error(codes.Unimplemented, "method UpsertDailyChecklist not implemented")
+}
+func (UnimplementedDailyChecklistServiceServer) DeleteDailyChecklist(context.Context, *DeleteDailyChecklistRequest) (*emptypb.Empty, error) {
+	return nil, status.Error(codes.Unimplemented, "method DeleteDailyChecklist not implemented")
+}
+func (UnimplementedDailyChecklistServiceServer) mustEmbedUnimplementedDailyChecklistServiceServer() {}
+func (UnimplementedDailyChecklistServiceServer) testEmbeddedByValue()                               {}
+
+// UnsafeDailyChecklistServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to DailyChecklistServiceServer will
+// result in compilation errors.
+type UnsafeDailyChecklistServiceServer interface {
+	mustEmbedUnimplementedDailyChecklistServiceServer()
+}
+
+func RegisterDailyChecklistServiceServer(s grpc.ServiceRegistrar, srv DailyChecklistServiceServer) {
+	// If the following call panics, it indicates UnimplementedDailyChecklistServiceServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&DailyChecklistService_ServiceDesc, srv)
+}
+
+func _DailyChecklistService_GetDailyChecklist_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetDailyChecklistRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(DailyChecklistServiceServer).GetDailyChecklist(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: DailyChecklistService_GetDailyChecklist_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(DailyChecklistServiceServer).GetDailyChecklist(ctx, req.(*GetDailyChecklistRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _DailyChecklistService_UpsertDailyChecklist_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UpsertDailyChecklistRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(DailyChecklistServiceServer).UpsertDailyChecklist(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: DailyChecklistService_UpsertDailyChecklist_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(DailyChecklistServiceServer).UpsertDailyChecklist(ctx, req.(*UpsertDailyChecklistRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _DailyChecklistService_DeleteDailyChecklist_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(DeleteDailyChecklistRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(DailyChecklistServiceServer).DeleteDailyChecklist(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: DailyChecklistService_DeleteDailyChecklist_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(DailyChecklistServiceServer).DeleteDailyChecklist(ctx, req.(*DeleteDailyChecklistRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// DailyChecklistService_ServiceDesc is the grpc.ServiceDesc for DailyChecklistService service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var DailyChecklistService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "memos.api.v1.DailyChecklistService",
+	HandlerType: (*DailyChecklistServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "GetDailyChecklist",
+			Handler:    _DailyChecklistService_GetDailyChecklist_Handler,
+		},
+		{
+			MethodName: "UpsertDailyChecklist",
+			Handler:    _DailyChecklistService_UpsertDailyChecklist_Handler,
+		},
+		{
+			MethodName: "DeleteDailyChecklist",
+			Handler:    _DailyChecklistService_DeleteDailyChecklist_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/v1/daily_checklist_service.proto",
+}
